src/test/ui/closures/2229_closure_analysis/migrations/migrations_rustfix.stderr
error: drop order will change in Rust 2021
  --> $DIR/migrations_rustfix.rs:19:13
   |
LL |       let c = || {
   |  _____________^
LL | |
LL | |
LL | |
LL | |         let _t = t.0;
LL | |     };
   | |_____^
   |
note: the lint level is defined here
  --> $DIR/migrations_rustfix.rs:2:9
   |
LL | #![deny(rust_2021_incompatible_closure_captures)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/disjoint-capture-in-closures.html>
help: add a dummy let to cause `t` to be fully captured
   |
LL |     let c = || { let _ = &t; 
LL |
LL |
LL |
LL |         let _t = t.0;
LL |     };
   |

error: drop order will change in Rust 2021
  --> $DIR/migrations_rustfix.rs:31:13
   |
LL |     let c = || t.0;
   |             ^^^^^^
   |
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/disjoint-capture-in-closures.html>
help: add a dummy let to cause `t` to be fully captured
   |
LL |     let c = || { let _ = &t; t.0 };
   |                ^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

